<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/friendLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/list_divider_holo_light"
        android:overScrollFooter="@null" />

    <ScrollView
        android:id="@+id/main_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center" />

            <Button
                android:id="@+id/tvShareInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/blue_heart"
                android:drawablePadding="10dp"
                android:paddingRight="25dp"
                android:text="@string/share_invite_link"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/surespotBlue" >
            </Button>

            <Button
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_menu_help"
                android:paddingRight="25dp"
                android:text="@string/help"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/surespotBlue" >
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/no_friends" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>