<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/friendItemLayout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/friendInactive"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/transparent_rectangle"
            android:visibility="visible">
        </View>

        <View
            android:id="@+id/friendActive"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/filled_blue_rectangle"
            android:visibility="gone">
        </View>

        <ImageView
            android:id="@+id/friendAvatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="left"

            android:layout_marginRight="5dp"
            android:scaleType="centerCrop">
        </ImageView>

        <TextView
            android:id="@+id/friendName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="25sp">
        </TextView>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/friendStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/surespotBlue"
                android:textSize="15sp">
            </TextView>

            <View
                android:id="@+id/messageActivity"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/filled_blue_circle"
                android:visibility="gone">
            </View>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inviteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notificationItemBlock"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:tag="block"
            android:text="@string/block_underline"
            android:textColor="@color/surespotBlue">
        </Button>

        <Button
            android:id="@+id/notificationItemIgnore"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:tag="ignore"
            android:text="@string/ignore_underline"
            android:textColor="@color/surespotBlue">
        </Button>

        <Button
            android:id="@+id/notificationItemAccept"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:tag="accept"
            android:text="@string/accept_underline"
            android:textColor="@color/surespotBlue">
        </Button>
    </LinearLayout>

</LinearLayout>