<com.twofours.surespot.chat.SoftKeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               android:id="@+id/chatLayout"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop">
    </ImageView>

    <com.viewpagerindicator.TitlePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="#7733b5e5"
        android:textSize="20sp"
        app:footerIndicatorStyle="none"
        app:footerLineHeight="0dp"
        app:footerPadding="8dp"
        app:selectedBold="true"
        app:selectedColor="@color/surespotBlue"
        app:topPadding="0dp"/>

    <com.twofours.surespot.ui.FixedViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTexts"
        android:layout_below="@+id/indicator"/>

    <LinearLayout
        android:id="@+id/fButtons"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/fEmoji"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/editTexts"

        android:orientation="horizontal">


        <ImageView
            android:id="@+id/bQR"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:src="@drawable/qr_surespot"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/bEmoji"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:src="@drawable/face"
            android:visibility="visible"
            />


        <ImageView
            android:id="@+id/bExpand"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:src="@drawable/arrow"
            />


        <ImageView
            android:id="@+id/bGIF"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:src="@drawable/gif"
            android:text="@string/gif"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="bold"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/bGallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/photo"
            android:visibility="visible"
            />


        <com.twofours.surespot.ui.TintableImageView
            android:id="@+id/bCamera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/camera"
            android:visibility="visible"
            />

        <ImageView
            android:id="@+id/bAddToContacts"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/add_friend"
            android:visibility="visible"
            />


        <ImageView
            android:id="@+id/bPlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/elipsis"
            android:visibility="gone"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/editTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fEmoji"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toLeftOf="@+id/bSend"
        android:layout_toRightOf="@+id/fButtons"
        >

        <EditText
            android:id="@+id/etInvite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/invite"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:maxHeight="150dp"
            android:maxLines="1"
            android:minHeight="45dp">
        </EditText>

        <com.rockerhieu.emojicon.EmojiconEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/send"
            android:imeOptions="actionSend|flagNoExtractUi"
            android:inputType="textMultiLine|textCapSentences"
            android:maxHeight="150dp"
            android:maxLines="5"
            android:minHeight="45dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:emojiconSize="30dp">
        </com.rockerhieu.emojicon.EmojiconEditText>

        <LinearLayout
            android:id="@+id/giphySearchFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/etGiphy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"

                android:imeOptions="actionSearch|flagNoExtractUi"
                android:inputType="text|textCapSentences"
                android:maxHeight="150dp"
                android:maxLines="1"
                android:minHeight="45dp">
            </EditText>

            <ImageView
                android:id="@+id/poweredByGiphy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/powered_by_giphy_light"/>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bSend"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/fEmoji"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"


        >

        <com.twofours.surespot.ui.TintableImageView
            android:id="@+id/ivInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:src="@drawable/add_friend">
        </com.twofours.surespot.ui.TintableImageView>

        <com.twofours.surespot.ui.TintableImageView
            android:id="@+id/ivVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/mic">
        </com.twofours.surespot.ui.TintableImageView>

        <com.twofours.surespot.ui.TintableImageView
            android:id="@+id/ivHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/home">
        </com.twofours.surespot.ui.TintableImageView>

        <com.twofours.surespot.ui.TintableImageView
            android:id="@+id/ivSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/send">
        </com.twofours.surespot.ui.TintableImageView>
    </FrameLayout>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/gifFrame"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_above="@id/editTexts"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentStart="true"
                 android:visibility="gone">

        <ProgressBar
            android:id="@+id/gif_progress_bar"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvGifs"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"

            />

        <TextView
            android:id="@+id/tv_no_gifs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_GIFS_found"
            android:visibility="gone"
            />


    </FrameLayout>

    <RelativeLayout
        android:id="@+id/voiceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#88000000">

            <com.twofours.surespot.voice.VolumeEnvelopeView
                android:id="@+id/volume_envelope"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#BB000000"
                android:visibility="gone"
                app:color="@color/surespotBlue"/>
        </FrameLayout>

        <TextView
            android:id="@+id/voiceRecTimeLeft"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/transparent_blue_circle"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

</com.twofours.surespot.chat.SoftKeyboardLayout>
